--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 :root {
   --primary: #d4a373;
-  --br: #ccd5ae;
+  --bg: #ccd5ae;
 }
 * {
-  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   outline: none;
   border: none;
   text-decoration: none;
+}
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: var(--bg);
+  color: #faedcd;
 }
