--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,52 @@ body {
   background-color: var(--bg);
   color: #faedcd;
 }
+/* navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.4rem 7%;
+  background-color: #e9edc9;
+  border-bottom: 1px solid #fefae0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
+
+.navbar .navbar-logo {
+  font-size: 2rem;
+  font-weight: 700;
+  /* color: #faedcd; */
+}
+.navbar .navbar-logo span {
+  color: #faedcd;
+  text-shadow: 2px 3px 1px #d4a373;
+  font-style: italic;
+}
+.navbar .navbar-nav a {
+  color: var(--primary);
+  display: inline-block;
+  font-size: 1.3rem;
+  margin: 0 1rem;
+}
+.navbar .navbar-nav a:hover {
+  color: #fefae0;
+}
+.navbar .navbar-nav a::after {
+  content: "";
+  display: block;
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1rem solid var(--primary);
+  transform: scaleX(0);
+  transition: 0.2s linear;
+}
+.navbar .navbar-nav a:hover::after {
+  transform: scaleX(0.5);
+}
+.navbar .navbar-extra a {
+  /* color: ; */
+  margin: 0 0.5rem;
+}
