--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,42 @@ body {
   /* color: ; */
   margin: 0 0.5rem;
 }
+.navbar .navbar-extra a:hover {
+  color: #fefae0;
+}
+#hamburger-menu {
+  display: none;
+}
+/* media Queries */
+
+/* desktop or laptop */
+@media (max-width: 1366px) {
+  html {
+    font-size: 75%;
+  }
+}
+
+/* tablet */
+@media (max-width: 768px) {
+  html {
+    font-size: 62%;
+  }
+  #hamburger-menu {
+    display: inline-block;
+  }
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #e9edc9;
+    width: 30rem;
+    height: 100vh;
+  }
+}
+
+/* mobile phone */
+@media (max-width: 450px) {
+  html {
+    font-size: 30%;
+  }
+}
