--- a/css/style.css
+++ b/css/style.css
@@ -94,9 +94,25 @@ body {
     background-color: #e9edc9;
     width: 30rem;
     height: 100vh;
+    transition: 0.7s;
   }
   .navbar .navbar-nav.active {
     right: 0;
+  }
+  .navbar .navbar-nav a {
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+  .navbar .navbar-nav a#nav-longx:hover::after {
+    transform: scaleX(0.5);
   }
 }
 
