--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: #faedcd;
+  /* min-height: 2000px; */
 }
 /* navbar */
 .navbar {
@@ -70,8 +71,32 @@ body {
 #hamburger-menu {
   display: none;
 }
-/* media Queries */
 
+/* hero */
+/* nathan-dumlao-KixfBEdyp64-unsplash.jpg */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("/img/header-bg-pict.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba(204, 213, 174, 1) 3%,
+    rgba(233, 237, 201, 0) 25%
+  );
+}
+/* media Queries */
 /* desktop or laptop */
 @media (max-width: 1366px) {
   html {
