--- a/css/style.css
+++ b/css/style.css
@@ -89,12 +89,43 @@ body {
   display: block;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 30%;
+  bottom: 0;
   background: linear-gradient(
     0deg,
     rgba(204, 213, 174, 1) 3%,
     rgba(233, 237, 201, 0) 25%
   );
+}
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+.hero .content h1 {
+  font-size: 5rem;
+  text-shadow: 1px 1px 3px rgba(212, 163, 115, 0.9);
+  line-height: 1.4;
+}
+.hero .content h1 span {
+  color: #d4a373;
+}
+.hero .content p {
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  line-height: 1.2;
+  font-weight: 300;
+  text-shadow: 1px 1px 3px rgba(212, 163, 115, 0.9);
+  /* mix-blend-mode: difference; */
+}
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #faedcd;
+  background-color: #d4a373;
+  border-radius: 0.5rem;
+  text-shadow: 1px 1px 3px rgba(254, 250, 224, 0.3);
 }
 /* media Queries */
 /* desktop or laptop */
