--- a/css/style.css
+++ b/css/style.css
@@ -128,16 +128,19 @@ body {
   text-shadow: 1px 1px 3px rgba(254, 250, 224, 0.3);
 }
 /* about section */
-.about {
+.about,
+.menu {
   padding: 7rem 7% 1.4rem;
 }
-.about h2 {
+.about h2,
+.menu h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
   text-shadow: 1px 1px 3px #d4a373;
 }
-.about h2 span {
+.about h2 span,
+.menu h2 span {
   color: #d4a373;
 }
 .about .row {
@@ -164,6 +167,36 @@ body {
   font-size: 1.4rem;
   font-weight: 300;
   line-height: 1.6;
+  color: var(--primary);
+}
+/* menu */
+.menu h2 {
+  margin-bottom: 1rem;
+}
+.menu p {
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-weight: 300;
+  line-height: 1.6;
+  color: var(--primary);
+}
+.menu .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+  justify-content: center;
+}
+.menu .menu-card {
+  text-align: center;
+  padding-bottom: 2rem;
+}
+.menu .row .menu-card img {
+  border-radius: 50%;
+  width: 90%;
+}
+.menu .row .menu-card .menu-card-title {
+  margin-top: 1.5rem auto 0.5rem;
   color: var(--primary);
 }
 /* media Queries */
@@ -226,6 +259,15 @@ body {
   }
   .about .row .content p {
     font-size: 1.5rem;
+  }
+  .menu p {
+    font-size: 1.2rem;
+  }
+  .menu .row .menu-card-title {
+    font-size: 1.3rem;
+  }
+  .menu .row .menu-card-price {
+    font-size: 1.4rem;
   }
 }
 
