modified style and index files, write in line code

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: var(--bg);
   color: #faedcd;
-  min-height: 2000px;
+  min-height: 3000px;
 }
 /* navbar */
 .navbar {
@@ -34,7 +34,7 @@ body {
 .navbar .navbar-logo {
   font-size: 2rem;
   font-weight: 700;
-  /* color: #faedcd; */
+  color: var(--primary);
 }
 .navbar .navbar-logo span {
   color: #faedcd;
@@ -64,6 +64,7 @@ body {
 .navbar .navbar-extra a {
   /* color: ; */
   margin: 0 0.5rem;
+  color: var(--primary);
 }
 .navbar .navbar-extra a:hover {
   color: #fefae0;
@@ -129,18 +130,21 @@ body {
 }
 /* about section */
 .about,
-.menu {
+.menu,
+.contact {
   padding: 7rem 7% 1.4rem;
 }
 .about h2,
-.menu h2 {
+.menu h2,
+.contact h2 {
   text-align: center;
   font-size: 2.6rem;
   margin-bottom: 3rem;
   text-shadow: 1px 1px 3px #d4a373;
 }
 .about h2 span,
-.menu h2 span {
+.menu h2 span,
+.contact span {
   color: #d4a373;
 }
 .about .row {
@@ -170,16 +174,19 @@ body {
   color: var(--primary);
 }
 /* menu */
-.menu h2 {
+.menu h2,
+.contact h2 {
   margin-bottom: 1rem;
 }
-.menu p {
+.menu p,
+.contact p {
   text-align: center;
   max-width: 30rem;
   margin: auto;
   font-weight: 300;
   line-height: 1.6;
   color: var(--primary);
+  font-size: 1.5rem;
 }
 .menu .row {
   display: flex;
@@ -198,6 +205,48 @@ body {
 .menu .row .menu-card .menu-card-title {
   margin-top: 1.5rem auto 0.5rem;
   color: var(--primary);
+}
+/* contact */
+.contact .row {
+  display: flex;
+  margin-top: 2rem;
+  background-color: #e9edc9;
+  /* flex-wrap: wrap; */
+}
+.contact .row .map {
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+.contact .row form {
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+.contact .row form .input-group {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: white;
+  border: 1px solid #d4a373;
+  padding-left: 2rem;
+  color: #d4a373;
+}
+.contact .row form .input-group input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  background-color: none;
+}
+.contact .row form .btn {
+  margin-top: 3rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  background-color: var(--primary);
+  cursor: pointer;
+  color: #faedcd;
+  border-radius: 6px;
 }
 /* media Queries */
 /* desktop or laptop */
@@ -268,6 +317,15 @@ body {
   }
   .menu .row .menu-card-price {
     font-size: 1.4rem;
+  }
+  .contact .row {
+    flex-wrap: wrap;
+  }
+  .contact .row .map {
+    height: 30rem;
+  }
+  .contact .row form {
+    padding-top: 0;
   }
 }
 
