--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,12 @@ html {
   height: 5rem;
   display: flex;
   align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transform: 0.3s;
+}
+.navbar .search-form.active {
+  transform: scaleY(1);
 }
 .navbar .search-form input {
   height: 100%;
